--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@headlessui/react": "latest",
     "@heroicons/react": "^2.0.18",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@vercel/analytics": "^1.1.1",
     "@vercel/og": "^0.5.18",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "class-variance-authority": "^0.7.0",
